# akillirehber

./: .env.example  .gitignore  BATCH_TEST_OPTIMIZATION.md  BLOOM_TAXONOMY_TEST_CHECKLIST.md  BLOOM_TAXONOMY_UPDATE_SUMMARY.md  CHROMADB_CHANGES.md  CHROMADB_QUICKSTART.md  DOCKER_CACHE_OPTIMIZATION.md  GISKARD_FIX.md  JOURNAL_VIZ_README.md  RAGAS_PROVIDER_SYNC_FIX.md  README.md  SYNC_SUMMARY.md  TASK_6_LOW_SCORE_RETRY_IMPLEMENTATION.md  USAGE_EXAMPLES.md  WEAVIATE_YEDEK_KILAVUZU.md  backup-weaviate.sh  batch_test_questions.json  bertscore_analysis.py  check_chromadb.ps1  docker-compose.coolify.yml  docker-compose.frontend.coolify.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  journal_visualization.py  journal_visualization_clean.py  journal_viz.py  kaynakca.md  pdf_extracts.json  rebuild-backend-giskard.bat  rebuild-backend-giskard.sh  reset_passwords.sql  restore-weaviate.sh  setup-auto-sync.sh  sync-to-coolify.ps1  sync-to-coolify.sh  test-auto-restore.ps1  test-auto-restore.sh  upgrade-weaviate.sh
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  alembic.ini  check_db.py  docker-entrypoint.sh  fix_migration.py  gunicorn_conf.py  migration_fix.py  pyproject.toml  requirements-base.txt  requirements.txt  reset_db.sh
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/docs/: VOYAGEAI_RATE_LIMIT_FIX.md  WEAVIATE_RERANKER_RESEARCH.md  semantic_chunker_deployment.md  semantic_chunker_migration_guide.md  semantic_chunker_monitoring.md  semantic_chunker_user_guide.md
(+319 files in other folders)
