[project]
name = "rag-llm-admin-panel-backend"
version = "0.1.0"
description = "Backend API for RAG/LLM Admin Panel - Text Chunking Module"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "pydantic>=2.12.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
]
nlp = [
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "sentence-transformers>=2.7.0",
]
llm = [
    "openai>=1.30.0",
]
docs = [
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
